[workspace]
members = [
  "crates/buffer",
  "crates/graph",
  "crates/util"
  ]
resolver = "3"

[workspace.dependencies]
crossbeam = "0.8"
buffer = { package = "tesi-buffer", path = "crates/buffer"}
graph = { package = "tesi-graph", path = "crates/graph" }
util = { package = "tesi-util", path = "crates/util" }
triple_buffer = "8"
