[workspace]
members = [
  "crates/batchbuffer",
  "crates/buffer",
  "crates/graph",
  "crates/processor",
  "crates/util"
]
resolver = "3"

[workspace.dependencies]
# 3P dependencies
crossbeam = "0.8"
triple_buffer = "8"
ouroboros = "0.18"

# internals
batchbuffer = { package = "batchbuffer", path = "crates/batchbuffer" }
buffer = { package = "tesi-buffer", path = "crates/buffer"}
graph = { package = "tesi-graph", path = "crates/graph" }
processor = { package = "tesi-processor", path = "crates/processor" }
util = { package = "tesi-util", path = "crates/util" }
